plugin/testData/annotator/perl/unreachableCode/givenWhenWhenDefault.code
sub test(){
  my $var = 'test';
  given($var){
      say 'before';
      when('test'){
          say 'first';
      }
      say 'mid';
      when('test'){
          say 'second';
      }
      say 'mid2';
      default{
          say 'default';
      }
      say '<error descr="Unreachable code">after</error>';
  }
  say 'end';
}